# MySimpleGE

./: .gitignore  CMakeLists.txt  README.md
Source/MySimpleGE/: init.cpp  init.h  openglErrorReporting.cpp
Source/MySimpleGE/Core/: Mesh.cpp  Mesh.h  ReferenceManager.h  Resource.h  ResourceManager.h  Singleton.h
Source/MySimpleGE/Core/Components/: GLStaticMeshComponent.cpp  GLStaticMeshComponent.h
Source/MySimpleGE/Core/Resources/: Material.cpp  Material.h  MeshResource.cpp  MeshResource.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Texture2dResource.cpp  Texture2dResource.h
Source/MySimpleGE/Core/Utils/: JsonUtils.cpp  JsonUtils.h  Timer.h
Source/MySimpleGE/Renderer/: GLCommonInclude.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLMeshBuffer.cpp  GLMeshBuffer.h  GLResource.cpp  GLResource.h  GLSLShader.cpp  GLSLShader.h  GLSceneRenderer.cpp  GLSceneRenderer.h  GLStaticModelRenderRequest.cpp  GLStaticModelRenderRequest.h  GLTexture2d.cpp  GLTexture2d.h  OpenGLRenderer.cpp  OpenGLRenderer.h
Source/MyTinyGE/: init.h
